<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        tools:ignore="NestedWeights"
        android:background="@color/colorPrimary">


    <LinearLayout
            android:id="@+id/text_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0">
        <TextView
                android:id="@+id/text_result"
                android:layout_width="match_parent"
                android:layout_height="188dp"
                android:text="@string/standard_calc_value"
                android:textSize="40sp"
                android:textColor="@color/colorText"
                />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/text_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0"
            android:layout_gravity="center_horizontal">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight=".20"
                android:weightSum="4">
            <Button
                    android:id="@+id/button_ac"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/calc_value_AC"
                    android:textSize="25sp"
                    android:background="@drawable/light_button"
                    android:textColor="@color/colorText"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:onClick="onACClick"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    />
            <Button
                    android:id="@+id/button_c"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/calc_value_C"
                    android:textSize="25sp"
                    android:background="@drawable/light_button"
                    android:textColor="@color/colorText"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/Widget.AppCompat.Button.Borderless" android:onClick="onCClick"/>
            <Button
                    android:id="@+id/button_percent"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/calc_value_percent"
                    android:textSize="25sp"
                    android:background="@drawable/light_button"
                    android:textColor="@color/colorText"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/Widget.AppCompat.Button.Borderless" android:onClick="OnSignClick"/>
            <Button
                    android:id="@+id/button_division"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/calc_value_division"
                    android:textSize="25sp"
                    android:background="@drawable/light_button"
                    android:textColor="@color/colorText"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/Widget.AppCompat.Button.Borderless" android:onClick="OnSignClick"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight=".20"
                android:weightSum="4">
            <Button
                    android:id="@+id/button_1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/calc_value_1"
                    android:textSize="25sp"
                    android:background="@drawable/dark_button"
                    android:textColor="@color/colorText"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/Widget.AppCompat.Button.Borderless" android:onClick="onDigitClick"/>
            <Button
                    android:id="@+id/button_2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/calc_value_2"
                    android:textSize="25sp"
                    android:background="@drawable/dark_button"
                    android:textColor="@color/colorText"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/Widget.AppCompat.Button.Borderless" android:onClick="onDigitClick"/>
            <Button
                    android:id="@+id/button_3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/calc_value_3"
                    android:textSize="25sp"
                    android:background="@drawable/dark_button"
                    android:textColor="@color/colorText"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/Widget.AppCompat.Button.Borderless" android:onClick="onDigitClick"/>
            <Button
                    android:id="@+id/button_x"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/calc_value_multiply"
                    android:textSize="25sp"
                    android:background="@drawable/light_button"
                    android:textColor="@color/colorText"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/Widget.AppCompat.Button.Borderless" android:onClick="OnSignClick"/>

        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight=".20"
                android:weightSum="4">
            <Button
                    android:id="@+id/button_4"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/calc_value_4"
                    android:textSize="25sp"
                    android:background="@drawable/dark_button"
                    android:textColor="@color/colorText"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/Widget.AppCompat.Button.Borderless" android:onClick="onDigitClick"/>
            <Button
                    android:id="@+id/button_5"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/calc_value_5"
                    android:textSize="25sp"
                    android:background="@drawable/dark_button"
                    android:textColor="@color/colorText"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/Widget.AppCompat.Button.Borderless" android:onClick="onDigitClick"/>
            <Button
                    android:id="@+id/button_6"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/calc_value_6"
                    android:textSize="25sp"
                    android:background="@drawable/dark_button"
                    android:textColor="@color/colorText"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/Widget.AppCompat.Button.Borderless" android:onClick="onDigitClick"/>
            <Button
                    android:id="@+id/button_minus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/calc_value_minus"
                    android:textSize="25sp"
                    android:background="@drawable/light_button"
                    android:textColor="@color/colorText"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/Widget.AppCompat.Button.Borderless" android:onClick="OnSignClick"/>

        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight=".20"
                android:weightSum="4">
            <Button
                    android:id="@+id/button_7"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/calc_value_7"
                    android:textSize="25sp"
                    android:background="@drawable/dark_button"
                    android:textColor="@color/colorText"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/Widget.AppCompat.Button.Borderless" android:onClick="onDigitClick"/>
            <Button
                    android:id="@+id/button_8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/calc_value_8"
                    android:textSize="25sp"
                    android:background="@drawable/dark_button"
                    android:textColor="@color/colorText"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/Widget.AppCompat.Button.Borderless" android:onClick="onDigitClick"/>
            <Button
                    android:id="@+id/button_9"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/calc_value_9"
                    android:textSize="25sp"
                    android:background="@drawable/dark_button"
                    android:textColor="@color/colorText"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/Widget.AppCompat.Button.Borderless" android:onClick="onDigitClick"/>
            <Button
                    android:id="@+id/button_plus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/calc_value_plus"
                    android:textSize="25sp"
                    android:background="@drawable/light_button"
                    android:textColor="@color/colorText"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/Widget.AppCompat.Button.Borderless" android:onClick="OnSignClick"/>

        </LinearLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight=".20"
                android:weightSum="4"
                >


            <Button
                    android:id="@+id/button_plus_minus"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/calc_value_plus_minus"
                    android:textSize="25sp"
                    android:background="@drawable/dark_button"
                    android:textColor="@color/colorText"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/Widget.AppCompat.Button.Borderless" android:onClick="onPlusMinusClick"/>
            <Button
                    android:id="@+id/button_0"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/calc_value_0"
                    android:textSize="25sp"
                    android:background="@drawable/dark_button"
                    android:textColor="@color/colorText"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:onClick="onDigitClick"/>
            <Button
                    android:id="@+id/button_point"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/calc_value_point"
                    android:textSize="25sp"
                    android:background="@drawable/dark_button"
                    android:textColor="@color/colorText"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:onClick="onDigitClick"/>
            <Button
                    android:id="@+id/button_equal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/calc_value_equal"
                    android:textSize="25sp"
                    android:background="@drawable/light_button"
                    android:textColor="@color/colorText"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:onClick="calculate"/>

        </LinearLayout>

    </LinearLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>